clusters/pk3s/paperless/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paperless-stripprefix
  namespace: paperless
spec:
  stripPrefix:
    prefixes:
      - /paperless
